--- a/Quotify/en.lproj/QuotifyViewController.xib
+++ b/Quotify/en.lproj/QuotifyViewController.xib
@@ -2,13 +2,13 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="7.10">
 	<data>
 		<int key="IBDocument.SystemTarget">1280</int>
-		<string key="IBDocument.SystemVersion">11C74</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1934</string>
-		<string key="IBDocument.AppKitVersion">1138.23</string>
-		<string key="IBDocument.HIToolboxVersion">567.00</string>
+		<string key="IBDocument.SystemVersion">10K549</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
+		<string key="IBDocument.AppKitVersion">1038.36</string>
+		<string key="IBDocument.HIToolboxVersion">461.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">931</string>
+			<string key="NS.object.0">933</string>
 		</object>
 		<object class="NSArray" key="IBDocument.IntegratedClassDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -44,7 +44,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="774585933">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -58,7 +58,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 10}, {320, 45}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="242252182"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -72,7 +71,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 49}, {320, 431}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="440876757"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -86,7 +84,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrameSize">{320, 464}</string>
 								<reference key="NSSuperview" ref="89788679"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1065744599"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -121,7 +118,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 92}, {278, 66}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="650439003"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
@@ -159,7 +155,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 174}, {273, 31}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="756011141"/>
 								<reference key="IBUIBackgroundColor" ref="1004154975"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -200,7 +195,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 213}, {273, 31}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="844627093"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -231,7 +225,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{193, 280}, {100, 100}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="806558314"/>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -256,7 +249,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{193, 280}, {100, 100}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="810476446"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -267,7 +259,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 417}, {280, 43}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="985716015"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
@@ -296,7 +287,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 332}, {165, 48}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="991126898"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -323,7 +313,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 280}, {165, 44}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="725837686"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -344,7 +333,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{7, 16}, {23, 30}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="465507396"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -364,7 +352,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{3, 74}, {27, 24}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="605860082"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -378,7 +365,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{289, 147}, {27, 24}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="189937787"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -392,8 +378,6 @@
 								<int key="NSvFlags">-2147483356</int>
 								<string key="NSFrame">{{273, 429}, {20, 20}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
@@ -402,9 +386,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{266, 177}, {24, 24}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="904665774"/>
-								<string key="NSReuseIdentifierKey">_NS:225</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
 									<integer value="5" key="IBUIAccessibilityTraits"/>
@@ -433,9 +415,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 174}, {273, 31}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="73331945"/>
-								<string key="NSReuseIdentifierKey">_NS:225</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -454,9 +434,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{266, 217}, {24, 24}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="997499922"/>
-								<string key="NSReuseIdentifierKey">_NS:225</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<int key="IBUITag">1</int>
 								<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
@@ -481,9 +459,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 213}, {273, 31}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="232334114"/>
-								<string key="NSReuseIdentifierKey">_NS:225</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<int key="IBUITag">1</int>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -501,7 +477,6 @@
 						</object>
 						<string key="NSFrame">{{0, -10}, {320, 480}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="767594282"/>
 						<reference key="IBUIBackgroundColor" ref="1004154975"/>
 						<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
@@ -511,8 +486,6 @@
 					</object>
 				</object>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
-				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="89788679"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -525,7 +498,7 @@
 			</object>
 			<object class="IBUIViewController" id="19867892">
 				<object class="IBUIView" key="IBUIView" id="795017958">
-					<reference key="NSNextResponder"/>
+					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">292</int>
 					<object class="NSMutableArray" key="NSSubviews">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -534,7 +507,6 @@
 							<int key="NSvFlags">290</int>
 							<string key="NSFrame">{{-1, 0}, {322, 40}}</string>
 							<reference key="NSSuperview" ref="795017958"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="773230582"/>
 							<bool key="IBUIUserInteractionEnabled">NO</bool>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -548,7 +520,6 @@
 							<int key="NSvFlags">292</int>
 							<string key="NSFrame">{{0, 37}, {320, 423}}</string>
 							<reference key="NSSuperview" ref="795017958"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="38093726"/>
 							<bool key="IBUIUserInteractionEnabled">NO</bool>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -559,7 +530,6 @@
 							<int key="NSvFlags">292</int>
 							<string key="NSFrame">{{6, 10}, {46, 19}}</string>
 							<reference key="NSSuperview" ref="795017958"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="262119074"/>
 							<object class="NSColor" key="IBUIBackgroundColor">
 								<int key="NSColorSpace">10</int>
@@ -4979,7 +4949,6 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 							<int key="NSvFlags">292</int>
 							<string key="NSFrame">{{20, 97}, {280, 31}}</string>
 							<reference key="NSSuperview" ref="795017958"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="330462889"/>
 							<bool key="IBUIOpaque">NO</bool>
 							<bool key="IBUIClipsSubviews">YES</bool>
@@ -5006,7 +4975,6 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 							<int key="NSvFlags">292</int>
 							<string key="NSFrame">{{20, 68}, {111, 21}}</string>
 							<reference key="NSSuperview" ref="795017958"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="809406309"/>
 							<bool key="IBUIOpaque">NO</bool>
 							<bool key="IBUIClipsSubviews">YES</bool>
@@ -5026,8 +4994,6 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 							<int key="NSvFlags">292</int>
 							<string key="NSFrame">{{124, 154}, {72, 37}}</string>
 							<reference key="NSSuperview" ref="795017958"/>
-							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView"/>
 							<bool key="IBUIOpaque">NO</bool>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							<int key="IBUIContentHorizontalAlignment">0</int>
@@ -5044,8 +5010,6 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 						</object>
 					</object>
 					<string key="NSFrame">{{0, 20}, {320, 460}}</string>
-					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="476434604"/>
 					<object class="NSColor" key="IBUIBackgroundColor">
 						<int key="NSColorSpace">3</int>
@@ -5064,7 +5028,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 			</object>
 			<object class="IBUIViewController" id="811918467">
 				<object class="IBUIView" key="IBUIView" id="983552417">
-					<reference key="NSNextResponder"/>
+					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">274</int>
 					<object class="NSMutableArray" key="NSSubviews">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -5073,9 +5037,6 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 							<int key="NSvFlags">290</int>
 							<string key="NSFrameSize">{320, 44}</string>
 							<reference key="NSSuperview" ref="983552417"/>
-							<reference key="NSWindow"/>
-							<reference key="NSNextKeyView"/>
-							<string key="NSReuseIdentifierKey">_NS:260</string>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							<object class="NSArray" key="IBUIItems">
 								<bool key="EncodedWithXMLCoder">YES</bool>
@@ -5100,10 +5061,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 						</object>
 					</object>
 					<string key="NSFrame">{{0, 20}, {320, 460}}</string>
-					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="754647590"/>
-					<string key="NSReuseIdentifierKey">_NS:196</string>
 					<object class="NSColor" key="IBUIBackgroundColor">
 						<int key="NSColorSpace">3</int>
 						<bytes key="NSWhite">MQA</bytes>
@@ -5186,14 +5144,6 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 						<reference key="destination" ref="19867892"/>
 					</object>
 					<int key="connectionID">94</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">quotifier</string>
-						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="809406309"/>
-					</object>
-					<int key="connectionID">98</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -5282,6 +5232,14 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 						<reference key="destination" ref="844627093"/>
 					</object>
 					<int key="connectionID">203</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">quotifierTF</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="809406309"/>
+					</object>
+					<int key="connectionID">206</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -5803,7 +5761,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">205</int>
+			<int key="maxID">206</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -6193,6 +6151,6 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 				<string>{640, 97}</string>
 			</object>
 		</object>
-		<string key="IBCocoaTouchPluginVersion">931</string>
+		<string key="IBCocoaTouchPluginVersion">933</string>
 	</data>
 </archive>
