--- a/Quotify/en.lproj/QuotifyViewController.xib
+++ b/Quotify/en.lproj/QuotifyViewController.xib
@@ -44,7 +44,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
 			<object class="IBUIView" id="774585933">
-				<nil key="NSNextResponder"/>
+				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -58,6 +58,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 10}, {320, 45}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="242252182"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -71,6 +72,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 49}, {320, 431}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="440876757"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -84,6 +86,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrameSize">{320, 464}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1065744599"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -118,6 +121,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 92}, {278, 66}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="650439003"/>
 								<object class="NSColor" key="IBUIBackgroundColor">
 									<int key="NSColorSpace">1</int>
@@ -155,6 +159,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 174}, {273, 31}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="756011141"/>
 								<reference key="IBUIBackgroundColor" ref="1004154975"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -184,7 +189,7 @@
 									<int key="type">1</int>
 									<double key="pointSize">12</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="356324384">
+								<object class="NSFont" key="IBUIFont" id="765338725">
 									<string key="NSName">Helvetica</string>
 									<double key="NSSize">12</double>
 									<int key="NSfFlags">16</int>
@@ -195,6 +200,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 213}, {273, 31}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="844627093"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -218,13 +224,14 @@
 									<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								</object>
 								<reference key="IBUIFontDescription" ref="244182641"/>
-								<reference key="IBUIFont" ref="356324384"/>
+								<reference key="IBUIFont" ref="765338725"/>
 							</object>
 							<object class="IBUIButton" id="991126898">
 								<reference key="NSNextResponder" ref="89788679"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{193, 280}, {100, 100}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="806558314"/>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -249,6 +256,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{193, 280}, {100, 100}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="810476446"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -259,6 +267,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 417}, {280, 43}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="985716015"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
@@ -287,6 +296,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 332}, {165, 48}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="991126898"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -313,6 +323,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 280}, {165, 44}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="725837686"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -333,6 +344,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{7, 16}, {23, 30}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="465507396"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -352,6 +364,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{3, 74}, {27, 24}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="605860082"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -365,6 +378,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{289, 147}, {27, 24}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="189937787"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -378,6 +392,8 @@
 								<int key="NSvFlags">-2147483356</int>
 								<string key="NSFrame">{{273, 429}, {20, 20}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
@@ -386,6 +402,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{266, 177}, {24, 24}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="904665774"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
@@ -415,6 +432,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{20, 174}, {273, 31}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="73331945"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -434,6 +452,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{266, 217}, {24, 24}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="997499922"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<int key="IBUITag">1</int>
@@ -457,8 +476,9 @@
 							<object class="IBUIButton" id="844627093">
 								<reference key="NSNextResponder" ref="89788679"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 213}, {273, 31}}</string>
+								<string key="NSFrame">{{266, 213}, {27, 31}}</string>
 								<reference key="NSSuperview" ref="89788679"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="232334114"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<int key="IBUITag">1</int>
@@ -477,6 +497,7 @@
 						</object>
 						<string key="NSFrame">{{0, -10}, {320, 480}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="767594282"/>
 						<reference key="IBUIBackgroundColor" ref="1004154975"/>
 						<object class="IBUIAccessibilityConfiguration" key="IBUIAccessibilityConfiguration">
@@ -486,6 +507,8 @@
 					</object>
 				</object>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
+				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="89788679"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -4973,7 +4996,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							</object>
 							<reference key="IBUIFontDescription" ref="244182641"/>
-							<reference key="IBUIFont" ref="356324384"/>
+							<reference key="IBUIFont" ref="765338725"/>
 						</object>
 						<object class="IBUILabel" id="38093726">
 							<reference key="NSNextResponder" ref="795017958"/>
@@ -5038,7 +5061,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 			</object>
 			<object class="IBUIViewController" id="811918467">
 				<object class="IBUIView" key="IBUIView" id="983552417">
-					<nil key="NSNextResponder"/>
+					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">274</int>
 					<object class="NSMutableArray" key="NSSubviews">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -5047,6 +5070,8 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 							<int key="NSvFlags">290</int>
 							<string key="NSFrameSize">{320, 44}</string>
 							<reference key="NSSuperview" ref="983552417"/>
+							<reference key="NSWindow"/>
+							<reference key="NSNextKeyView"/>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 							<object class="NSArray" key="IBUIItems">
 								<bool key="EncodedWithXMLCoder">YES</bool>
@@ -5071,6 +5096,8 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 						</object>
 					</object>
 					<string key="NSFrame">{{0, 20}, {320, 460}}</string>
+					<reference key="NSSuperview"/>
+					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="754647590"/>
 					<object class="NSColor" key="IBUIBackgroundColor">
 						<int key="NSColorSpace">3</int>
@@ -5278,6 +5305,24 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">witnessesSwiped:</string>
+						<reference key="source" ref="904665774"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">3</int>
+					</object>
+					<int key="connectionID">212</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">witnessesTouchedUp:</string>
+						<reference key="source" ref="904665774"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">214</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">quotifyPressed:</string>
 						<reference key="source" ref="810476446"/>
 						<reference key="destination" ref="372490531"/>
@@ -5323,12 +5368,21 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">emailEditingEnded:</string>
+						<string key="label">witnessesSwiped:</string>
+						<reference key="source" ref="809406309"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">3</int>
+					</object>
+					<int key="connectionID">209</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">witnessesSwiped:</string>
 						<reference key="source" ref="809406309"/>
 						<reference key="destination" ref="372490531"/>
 						<int key="IBEventType">19</int>
 					</object>
-					<int key="connectionID">99</int>
+					<int key="connectionID">211</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -5390,6 +5444,15 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 						<int key="IBEventType">7</int>
 					</object>
 					<int key="connectionID">205</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">witnessesSwiped:</string>
+						<reference key="source" ref="844627093"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">3</int>
+					</object>
+					<int key="connectionID">210</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -5771,7 +5834,7 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">206</int>
+			<int key="maxID">214</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -5794,16 +5857,18 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 							<string>backToMainView:</string>
 							<string>backToQuoteEntry:</string>
 							<string>doneAddingPeople:</string>
-							<string>emailEditingEnded:</string>
 							<string>fbButtonClicked:</string>
 							<string>hideKeyboard:</string>
 							<string>imageBoxPressed:</string>
 							<string>quotifyPressed:</string>
 							<string>settingsPressed:</string>
 							<string>showContacts:</string>
+							<string>witnessesSwiped:</string>
+							<string>witnessesTouchedUp:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -5823,13 +5888,14 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 							<string>backToMainView:</string>
 							<string>backToQuoteEntry:</string>
 							<string>doneAddingPeople:</string>
-							<string>emailEditingEnded:</string>
 							<string>fbButtonClicked:</string>
 							<string>hideKeyboard:</string>
 							<string>imageBoxPressed:</string>
 							<string>quotifyPressed:</string>
 							<string>settingsPressed:</string>
 							<string>showContacts:</string>
+							<string>witnessesSwiped:</string>
+							<string>witnessesTouchedUp:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
@@ -5843,10 +5909,6 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 							</object>
 							<object class="IBActionInfo">
 								<string key="name">doneAddingPeople:</string>
-								<string key="candidateClassName">id</string>
-							</object>
-							<object class="IBActionInfo">
-								<string key="name">emailEditingEnded:</string>
 								<string key="candidateClassName">id</string>
 							</object>
 							<object class="IBActionInfo">
@@ -5871,6 +5933,14 @@ AAgAAAAIAAIACAACAAAAAgAAAAEAAQABAAE</bytes>
 							</object>
 							<object class="IBActionInfo">
 								<string key="name">showContacts:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">witnessesSwiped:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">witnessesTouchedUp:</string>
 								<string key="candidateClassName">id</string>
 							</object>
 						</object>
